[project]
name = "runpod-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "aiohttp>=3.11.8",
    "av>=14.2.0",
    "chardet>=5.2.0",
    "comfy-cli>=1.3.8",
    "comfyui-frontend-package==1.11.8",
    "einops>=0.8.1",
    "gitpython>=3.1.44",
    "huggingface-hub>0.20",
    "kornia>=0.7.1",
    "matrix-client==0.4.0",
    "numpy>=1.25.0",
    "pillow>=11.1.0",
    "pip>=25.0.1",
    "psutil>=7.0.0",
    "pygithub>=2.6.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "safetensors>=0.4.2",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "soundfile>=0.13.1",
    "spandrel>=0.4.1",
    "tokenizers>=0.13.3",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchsde>=0.2.6",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.28.1",
    "typer>=0.15.2",
    "typing-extensions>=4.12.2",
    "uv>=0.6.6",
    "yarl>=1.18.0",
]
